--- a/src/locales/ja.json
+++ b/src/locales/ja.json
@@ -31,11 +31,11 @@
     "recordCough": {
       "header": "咳を記録する",
       "title": "手順",
-      "intro1": "他の人から少なくとも<strong>20フィート（6m）</strong>離れた<strong>静かな環境</strong>を見つけ、布やサージカルマスクを着用してください。体調が悪いときは、座ってください。",
-      "intro2": "デバイスを<strong>30-60 cm</strong>口から離して持ち、 プラスチックなどでデバイスを覆ったり<strong>遮ったり</strong> しないようにしてください。咳を強くしすぎないように注意しましょう。",
-      "text": "録音ボタンをタップして、携帯電話の下部に向かって<strong>意図的に</strong>咳を<strong>3回</strong>してください。終わったら、停止ボタンをタップします。",
-      "record": "記録する",
-      "stop": "停止する"
+      "intro1": "他の人から少なくとも20フィート（6m）離れた静かな環境を見つけてください。",
+      "intro2": "不織布マスクまたは布マスクを着用し、端末を顔から両手の長さほど離してください。",
+      "text": "下の録音ボタンを押し、意図的に3回咳をしてください。各咳の間には深呼吸を挟んでください。終了したら停止ボタンをタップしてください。",
+      "record": "Record",
+      "stop": "Stop"
     },
     "next": "次へ",
     "retryButton": "リトライ",
@@ -49,7 +49,7 @@
     },
     "next": "続ける",
     "delete": "削除",
-    "textCount": "「続ける」をクリックして次に進みます。",
+    "textCount": "「続ける」を押して次に進んでください。",
     "upload": "自分のファイルをアップロードする"
   },
   "recordingsRecordManual": {
