--- a/src/locales/ja.json
+++ b/src/locales/ja.json
@@ -82,9 +82,9 @@
     "resultModal": "<strong>Important note:</strong> This app will not predict your COVID-19 status or diagnose any disease, disorder, or other health condition. Virufy is conducting research and will use the information you provide for that research only. Virufy will not take place of a doctor and would like to remind you it is your responsibility to seek medical advice from your doctor.",
     "resultNotDetected": "COVID-19: 検出されませんでした",
     "resultNotDetectedText": "あなたの音声にはCOVID-19の兆候は見られませんでした。引き続き、医療専門家や各国の保健当局の助言に基づいて、<strong>適切な対策を行ってください。</strong>アプリでのチェックは毎日行うことをおすすめします。",
-    "resultNotAnalyze": "咳の分析ができない",
+    "resultNotAnalyze": "咳を解析できません（エラー）",
     "resultModalDummy": "<strong>重要なお知らせ:</strong> このアプリは、COVID-19の感染有無を予測したり、病気・障害・その他の健康状態を診断したりするものではありません。Virufyは研究を目的としており、ご提供いただいた情報は研究のみに使用されます。Virufyは医師の代わりにはなれません。健康に関する判断や対応については、必ずご自身の医師にご相談ください。",
-    "resultNotAnalyzeText": "当団体のアルゴリズムでは、お客様のCOVID-19の状態を判断することができません。<strong>別の咳を提出してください</strong>.",
+    "resultNotAnalyzeText": "アルゴリズムがCOVID-19の兆候を判定できませんでした。<strong>別の咳を録音して送信してください。</strong>",
     "resultDetectedDummy": "COVID-19: 陽性 <br/>(ダミーの例)",
     "resultDetectedText": "あなたの音声にはCOVID-19の兆候が見られます。<strong>医療機関に相談</strong>のうえ、必要な予防措置を取ってください。",
     "testForCovid": "COVID-19のテスト",
