Select result converted into arabic

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -85,5 +85,11 @@
   },
   "footerReportProblems": {
     "message": "Something wrong? Report an error"
+  },
+  "setResult": {
+    "selectResult": "Select Result",
+    "negative": "Negative",
+    "unknown": "Unknown",
+    "positive": "Positive"
   }
 }
