--- a/src/locales/ar.json
+++ b/src/locales/ar.json
@@ -1,6 +1,6 @@
 {
     "main": {
-      "title": "COVID-19 كشف السعال الناتج عن",
+      "title": "كشف السعال لـ COVID-19",
       "note": "<strong>يرجى الملاحظة:</strong> هذا النموذج مخصص لجمع البيانات فقط ولن يتنبَّأ بإصابتك بفيروس كوفيد أو يشخِّص أي مرض أو اضطراب أو حالة صحية أخرى. تقوم فيروفاي بإجراء بحث وستستخدم المعلومات التي تقدمها لهذا البحث فقط. فيروفاي لن تحل محل الطبيب وترغب في تذكيرك بأنه من مسؤوليتك استشارة الطبيب للحصول على النصيحة الطبية.",
       "selectYourLanguage": "اللغة",
       "nextButton": "التالي",
@@ -13,7 +13,7 @@
     },
     "helpVirufy": {
       "aboutParagraph": "<0><strong>فيروفاي</strong> هي شركة غير ربحية قوية تضم <strong>250 متطوِّعاً/موظفاً</strong> وخمسين منظَّمة شريكة بما في ذلك <strong>خدمات أمازون الشبكية</strong>، مختبر الابتكار للاستجابة للكوفيد من <strong>جامعة ستانفورد</strong>، ومنظَّمة عالم فتيّ واحد. لقد طوَّرنا تطبيقاً للهواتف الذكية يعتمد على الذكاء الاصطناعي لتحليل بصمة السعال المسجَّلة وتحديد مدى <strong>تشابهها مع بيانات السعال المصاحب للكوفيد</strong>. تحظى فيروفاي بدعم من أعضاء في هيئة التدريس وخريجين من <strong>جامعة واشنطن، جامعة ستانفورد، جامعة كاليفورنيا/بيركلي، معهد ماساتشوستس للتكنولوجيا، جامعة هارفارد، وجامعة كارنيجي ميلون.</0> <1>من خلال جمع <strong>تسجيلات السعال</strong> من أشخاص حول العالم، تقوم فيروفاي بتحسين قدرة خوارزميتها الذكية على تعرُّف نمط الصوت الفريد للكوفيد.</1><2><strong>لديك القدرة</strong> على إفادة ملايين الأشخاص حول العالم من خلال <strong>مساهمتك في دراسة السعال</strong> الخاصة بنا.</2>",
-      "installApp": "حمِّل التطبيق",
+      "installApp": "تثبيت كتطبيق",
       "nextButton": "الموافقة"
     },
     "beforeStart": {
@@ -84,6 +84,18 @@
     },
     "footerReportProblems": {
       "message": "هل هناك مشكلة؟ قدِّم تقريراً عن الخطأ."
+    },
+    "common": {
+      "pleaseSelect": "يرجى الاختيار",
+      "selectResult": "يرجى الاختيار",
+      "positive": "إيجابي",
+      "negative": "سلبي",
+      "unknown": "غير معروف"
+    },
+    "setResult": {
+      "selectResult": "اختر النتيجة",
+      "negative": "سلبي",
+      "unknown": "غير معروف",
+      "positive": "إيجابي"
     }
   }
-  
