--- a/src/locales/fr.json
+++ b/src/locales/fr.json
@@ -67,15 +67,26 @@
     "processingTitle": "Traitement en cours...",
     "note": "Remarque importante :",
     "result": "Résultats",
-      "resultModal": "<strong>Remarque importante :</strong> Cette application ne prédit pas votre statut COVID-19 et ne diagnostique aucune maladie. Virufy effectue des recherches et utilise uniquement vos informations dans ce cadre. Virufy ne remplace pas un médecin. Consultez un professionnel de santé si nécessaire.",
-    "resultNotDetected": "COVID-19 : NON DÉTECTÉ",
-    "resultNotDetectedText": "Votre voix ne semble pas indiquer de signes de COVID-19. <strong>Continuez à suivre les mesures appropriées</strong> et réévaluez-vous quotidiennement avec notre application.",
-    "resultDetected": "COVID-19 : DÉTECTÉ",
+    "screeningResultsTitle": "Résultats de dépistage de toutes les maladies",
+    "returnHome": "Retour à l’accueil",
+    "statusDetected": "Détecté",
+    "statusNotDetected": "Non détecté",
+    "statusInconclusive": "Non concluant",
+    "riskHigh": "Risque\nélevé",
+    "riskLow": "Risque\nfaible",
+    "riskUnknown": "Risque\ninconnu",
+    "cardTitle": "{{disease}}\n{{status}}",
+    "analysisSummary": "D’après l’analyse de votre toux, il y a {{percent}}% de probabilité de {{disease}}. Surveillez vos symptômes et consultez un professionnel de santé s’ils persistent ou s’aggravent.",
+    "disclaimerText": "Cette application ne prédit pas votre statut {{disease}} et ne diagnostique aucune maladie, trouble ou autre état de santé. Virufy effectue des recherches et utilisera uniquement les informations que vous fournissez dans ce cadre. Virufy ne remplace pas un médecin et vous rappelle qu’il est de votre responsabilité de demander un avis médical.",
+      "resultModal": "<strong>Remarque importante :</strong> Cette application ne prédit pas votre statut {{disease}} et ne diagnostique aucune maladie. Virufy effectue des recherches et utilise uniquement vos informations dans ce cadre. Virufy ne remplace pas un médecin. Consultez un professionnel de santé si nécessaire.",
+    "resultNotDetected": "{{disease}} : NON DÉTECTÉ",
+    "resultNotDetectedText": "Votre voix ne semble pas indiquer de signes de {{disease}}. <strong>Continuez à suivre les mesures appropriées</strong> et réévaluez-vous quotidiennement avec notre application.",
+    "resultDetected": "{{disease}} : DÉTECTÉ",
     "resultNotAnalyze": "Impossible d'analyser la toux",
     "resultModalDummy": "<strong>Remarque importante :</strong> Cette application est uniquement à des fins de démonstration et ne fournit pas de prédiction réelle. Participez à l'étude Virufy pour contribuer.",
-    "resultNotAnalyzeText": "Notre algorithme n'a pas pu déterminer votre statut COVID-19. <strong>Veuillez soumettre une autre toux.</strong>",
-    "resultDetectedDummy": "COVID-19 : DÉTECTÉ <br/>(Exemple fictif)",
-    "resultDetectedText": "Votre voix présente des indicateurs possibles de COVID-19. <strong>Contactez un professionnel de santé</strong> et prenez des précautions supplémentaires.",
+    "resultNotAnalyzeText": "Notre algorithme n'a pas pu déterminer votre statut {{disease}}. <strong>Veuillez soumettre une autre toux.</strong>",
+    "resultDetectedDummy": "{{disease}} : DÉTECTÉ <br/>(Exemple fictif)",
+    "resultDetectedText": "Votre voix présente des indicateurs possibles de {{disease}}. <strong>Contactez un professionnel de santé</strong> et prenez des précautions supplémentaires.",
     "testForCovid": "Test COVID-19",
     "nextButton": "Soumettre une autre toux",
     "submitError": "Une erreur est survenue. Veuillez réessayer.",
