--- a/src/locales/kr.json
+++ b/src/locales/kr.json
@@ -67,15 +67,26 @@
       "processingTitle": "처리 중...",
       "note": "중요 참고 사항:",
       "result": "결과",
-      "resultModal": "<strong>중요 참고 사항:</strong> 이 앱은 COVID-19 상태를 예측하거나 질병, 장애 또는 기타 건강 상태를 진단하지 않습니다. Virufy는 연구를 수행하고 제공된 정보를 해당 연구 목적으로만 사용합니다. Virufy는 의사를 대체하지 않으며 의사의 조언을 구하는 것이 귀하의 책임임을 알려드립니다.",
-      "resultNotDetected": "COVID-19: 감지되지 않음",
-      "resultNotDetectedText": "귀하의 음성에는 COVID-19의 징후가 없는 것으로 보입니다. 의료 전문가 또는 관련 규제 기관의 조언에 따라 적절한 조치를 계속 취하고 매일 앱에서 자신을 재평가하십시오.",
-      "resultDetected": "COVID-19: 감지됨",
+      "screeningResultsTitle": "전체 질환 선별 결과",
+      "returnHome": "홈으로 돌아가기",
+      "statusDetected": "감지됨",
+      "statusNotDetected": "감지되지 않음",
+      "statusInconclusive": "불확실",
+      "riskHigh": "높은\n위험",
+      "riskLow": "낮은\n위험",
+      "riskUnknown": "알 수 없는\n위험",
+      "cardTitle": "{{disease}}\n{{status}}",
+      "analysisSummary": "기침 오디오 분석 결과, {{disease}}일 가능성이 {{percent}}%입니다. 증상을 모니터링하고 지속되거나 악화되면 의료 전문가의 조언을 구하십시오.",
+      "disclaimerText": "이 앱은 {{disease}} 상태를 예측하거나 질병, 장애 또는 기타 건강 상태를 진단하지 않습니다. Virufy는 연구를 수행하고 제공된 정보를 해당 연구 목적으로만 사용합니다. Virufy는 의사를 대체하지 않으며 의료 조언을 구하는 것은 귀하의 책임임을 알려드립니다.",
+      "resultModal": "<strong>중요 참고 사항:</strong> 이 앱은 {{disease}} 상태를 예측하거나 질병, 장애 또는 기타 건강 상태를 진단하지 않습니다. Virufy는 연구를 수행하고 제공된 정보를 해당 연구 목적으로만 사용합니다. Virufy는 의사를 대체하지 않으며 의사의 조언을 구하는 것이 귀하의 책임임을 알려드립니다.",
+      "resultNotDetected": "{{disease}}: 감지되지 않음",
+      "resultNotDetectedText": "귀하의 음성에는 {{disease}}의 징후가 없는 것으로 보입니다. 의료 전문가 또는 관련 규제 기관의 조언에 따라 적절한 조치를 계속 취하고 매일 앱에서 자신을 재평가하십시오.",
+      "resultDetected": "{{disease}}: 감지됨",
       "resultNotAnalyze": "기침 분석 불가",
       "resultModalDummy": "<strong>중요 참고 사항:</strong> 이 앱은 데모 목적으로만 제공되며 실제 예측을 제공하지 않습니다. Virufy Study에 방문하여 기침을 기여하십시오.",
-      "resultNotAnalyzeText": "알고리즘이 COVID-19 상태를 판단할 수 없습니다. <strong>다른 기침을 제출하십시오.</strong>",
-      "resultDetectedDummy": "COVID-19: 감지됨 <br/>(데모 예시)",
-      "resultDetectedText": "귀하의 음성에는 COVID-19의 가능성이 있는 징후가 있습니다. <strong>의료 전문가에게 문의하고 추가 예방 조치를 취하십시오.</strong>",
+      "resultNotAnalyzeText": "알고리즘이 {{disease}} 상태를 판단할 수 없습니다. <strong>다른 기침을 제출하십시오.</strong>",
+      "resultDetectedDummy": "{{disease}}: 감지됨 <br/>(데모 예시)",
+      "resultDetectedText": "귀하의 음성에는 {{disease}}의 가능성이 있는 징후가 있습니다. <strong>의료 전문가에게 문의하고 추가 예방 조치를 취하십시오.</strong>",
       "testForCovid": "COVID-19 검사",
       "nextButton": "다른 기침 제출",
       "submitError": "오류가 발생했습니다. 다시 시도하십시오.",
