Fixed pediatric category header

--- a/src/locales/ar.json
+++ b/src/locales/ar.json
@@ -104,6 +104,8 @@
       "unknown": "غير معروف"
     },
     "setResult": {
+      "selectDisease": "اختر المرض",
+      "pediatricSection": "أمراض الأطفال",
       "selectResult": "اختر النتيجة",
       "negative": "سلبي",
       "unknown": "غير معروف",
