Added categorized menu items for Adult and Pediatric groups

--- a/src/locales/ar.json
+++ b/src/locales/ar.json
@@ -105,6 +105,7 @@
     },
     "setResult": {
       "selectDisease": "اختر المرض",
+      "adultSection": "البالغون",
       "pediatricSection": "أمراض الأطفال",
       "selectResult": "اختر النتيجة",
       "negative": "سلبي",
