--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -100,6 +100,7 @@
   
   "setResult": {
     "selectDisease": "Select Disease",
+    "adultSection": "Adult",
     "pediatricSection": "Pediatric",
     "selectResult": "Select Result",
     "negative": "Negative",
